[project]
name = "sps-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "app>=0.0.1",
    "certifi>=2025.8.3",
    "datasets>=4.4.1",
    "fastapi[standard]>=0.116.1",
    "jupyter>=1.1.1",
    "marimo>=0.15.5",
    "matplotlib>=3.10.6",
    "metrics>=0.0.2",
    "numpy>=2.3.3",
    "pip>=25.2",
    "pydantic>=2.11.9",
    "scipy>=1.16.2",
    "spacy>=3.8.7",
    "torch>=2.8.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.23.0",
    "transfers>=0.0.1",
    "transformers==4.45.0",
    "union>=0.1.194",
]

[tool.uv.workspace]
members = [
    "sps_genai",
    "sps_genai_v2",
    "app/sps_genai_v2",
]
